[gd_scene load_steps=7 format=3 uid="uid://8soncbgcj85e"]

[ext_resource type="Script" uid="uid://dqp41ev8qo14d" path="res://zoom_frame.gd" id="1_8lmrl"]
[ext_resource type="Texture2D" uid="uid://bujhiguy85vre" path="res://asset/background/livingRoom.jpg" id="2_njkge"]
[ext_resource type="Texture2D" uid="uid://b4eh7bjhj3klh" path="res://new_asset/frame_puzzle/frame_empty.PNG" id="3_cw372"]
[ext_resource type="Texture2D" uid="uid://dl42rdduw1fr3" path="res://new_asset/frame_puzzle/frame_not_empty.PNG" id="4_f00f3"]
[ext_resource type="Texture2D" uid="uid://dkupccpteadlw" path="res://asset/background/filter_front.PNG" id="5_ubrcc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixyti"]
size = Vector2(46.375, 53.4063)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8lmrl")

[node name="LivingRoom" type="Sprite2D" parent="."]
position = Vector2(963, 642)
scale = Vector2(1.645, 1.645)
texture = ExtResource("2_njkge")

[node name="FrameEmpty" type="Sprite2D" parent="."]
position = Vector2(1088, 478)
scale = Vector2(1.60424, 1.60424)
texture = ExtResource("3_cw372")

[node name="FrameNotEmpty" type="Sprite2D" parent="."]
visible = false
position = Vector2(1089, 478)
scale = Vector2(1.60278, 1.60278)
texture = ExtResource("4_f00f3")

[node name="FilterFront" type="Sprite2D" parent="."]
position = Vector2(640, 400)
scale = Vector2(0.888889, 0.888889)
texture = ExtResource("5_ubrcc")

[node name="Area2D" type="Area2D" parent="FilterFront"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FilterFront/Area2D"]
position = Vector2(-549.688, 1.42188)
shape = SubResource("RectangleShape2D_ixyti")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FilterFront/Area2D"]
position = Vector2(542.25, 1.42188)
shape = SubResource("RectangleShape2D_ixyti")

[connection signal="input_event" from="FilterFront/Area2D" to="." method="exit_panel"]
[connection signal="mouse_entered" from="FilterFront/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="FilterFront/Area2D" to="." method="_on_area_2d_mouse_exited"]
